<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stampLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    tools:context=".Games.StampGame.StampActivity">

    <Button
        android:id="@+id/stamp_game_yes"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stamp_game_no" />

    <Button
        android:id="@+id/stamp_game_no"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_proposal"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="120dp"
        android:text="@string/stamp_game_proposal"
        android:textColor="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_char_rating"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_rating"
        android:textColor="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/stamp_game_proposal"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_rating_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_rating_score"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/stamp_game_proposal_left"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_proposal_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="120dp"
        android:text="@string/stamp_game_proposal_left"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/NPC_image"
        android:layout_width="162dp"
        android:layout_height="163dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/NPC_image"
        app:layout_constraintBottom_toTopOf="@+id/stamp_game_char_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/npc" />

    <FrameLayout
        android:id="@+id/frameLayoutTextBox"
        android:layout_width="385dp"
        android:layout_height="318dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/npcPrompt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/text_box_white"
            android:alpha = "0.7"
            android:paddingStart="38dp"
            android:paddingTop="35dp"
            android:paddingEnd="35dp"
            android:paddingBottom="10dp"
            android:text="@string/NPC_Prompt"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="monospace" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayoutSprite"
        android:layout_width="171dp"
        android:layout_height="264dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stamp_game_yes"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/stamp_game_character_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/stamp_game_char_image"
            app:srcCompat="@drawable/paul_gries" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>