<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/babyInstructionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backColor">

    <TextView
        android:id="@+id/baby_game_title"
        style="@style/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/the_baby_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/baby_game_body"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/baby_game_instruction_body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textColor"
        android:fontFamily="@font/pixelfont"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/baby_game_title" />

    <Button
        android:id="@+id/start_game"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="148dp"
        android:text="@string/open_the_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>