<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stampInstructionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backColor"
    tools:context=".Games.StampGame.StampActivity">

    <TextView
        android:id="@+id/stamp_instructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="169dp"
        android:text="@string/the_stamping_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/textColor"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stamp_instructions_body"
        android:layout_width="298dp"
        android:layout_height="241dp"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:text="@string/stamp_instruction_body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stamp_instructions_title" />

    <Button
        android:id="@+id/start_game"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="148dp"
        android:text="@string/open_the_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>